--- a/.env
+++ b/.env
@@ -44,3 +44,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+NOCAPTCHA_SITEKEY=6Ld_-9ojAAAAAOEA1UEKfZvU7g1z3VUS9Qn09-dt
+NOCAPTCHA_SECRET=6Ld_-9ojAAAAAOB7t4UyAFRAODsTc9AFO5rGJQ37
+RECAPTCHA_SITE=https://www.google.com/recaptcha/admin/
