--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,16 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "anhskohbo/no-captcha": "^3.4",
+        "biscolab/laravel-recaptcha": "^5.4",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^3.0",
         "guzzlehttp/guzzle": "^7.2",
+        "intervention/image": "^2.3",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.1",
-        "intervention/image": "^2.3",
         "spatie/laravel-medialibrary": "^10.0.0"
     },
     "require-dev": {
